--- a/src/components/posts.css
+++ b/src/components/posts.css
@@ -24,7 +24,7 @@ h2{
   padding: 15px;
   border-radius: 15px;
   box-shadow: 3px 3px 3px #999;
-  background-color: brown;
+  background-color:darkcyan;
   color: rgba(255, 255, 255, 1);
   animation: bright 2.5s ease infinite;
 }
